<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#FFFFFF"
    android:padding="20dp"
    >
    
	<ImageView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:src="@drawable/dialog_outdoor_sos"
	    android:contentDescription="@string/img_all"
	    />
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginTop="@dimen/dp_10"
	    android:paddingLeft="@dimen/dp_10"
	    android:paddingRight="@dimen/dp_10"
	    >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dialog_sendsos"
	        />
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center_horizontal"
	        android:layout_marginTop="@dimen/dp_10"
	        >
	        <Button 
	            android:id="@+id/dialog_send_sos"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/dialog_sendsos_send"
	            android:layout_weight="1"
	            />
	        <Button 
	            android:id="@+id/dialog_send_cancel"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/dialog_sendsos_cancel"
	            android:layout_marginLeft="@dimen/dp_20"
	            android:layout_weight="1"
	            />
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>
