<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_white"
    android:orientation="vertical" 
    >
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_blue"
        >
        <TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_set_set"
			android:textSize="@dimen/sp_20"
			android:textColor="@color/color_white"
			android:layout_centerInParent="true"
            />
        <TextView 
            android:id="@+id/info_setting_save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_set_save"
			android:textSize="@dimen/sp_16"
			android:textColor="@color/color_white"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:layout_marginRight="@dimen/dp_20"
            />
    </RelativeLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_30"
            >
            <TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/info_set_name"
				android:textSize="@dimen/sp_20"
				android:textColor="@color/color_black"
                />
            <EditText 
                android:id="@+id/createteam_name"
                android:layout_width="@dimen/dp_220"
                android:layout_height="@dimen/dp_35"
                android:background="@color/color_ed"
                android:layout_marginLeft="@dimen/dp_20"
                android:singleLine="true"
                android:inputType="none"
                android:paddingLeft="@dimen/dp_10"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_30"
            android:gravity="center_vertical"
            >
            <TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/info_set_sex"
				android:textSize="@dimen/sp_20"
				android:textColor="@color/color_black"
                />
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:src="@drawable/info_setting_sex"
                android:contentDescription="@string/info_set_seximg"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/info_set_sex_female"
                android:textSize="@dimen/sp_20"
				android:textColor="@color/color_black"
                />
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:src="@drawable/info_setting_sex_checked"
                android:contentDescription="@string/info_set_seximg"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/info_set_sex_male"
                android:textSize="@dimen/sp_20"
				android:textColor="@color/color_black"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_30"
            >
            <TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/info_set_height"
				android:textSize="@dimen/sp_20"
				android:textColor="@color/color_black"
                />
            <EditText 
                android:layout_width="@dimen/dp_220"
                android:layout_height="@dimen/dp_35"
                android:background="@color/color_ed"
                android:layout_marginLeft="@dimen/dp_20"
                android:singleLine="true"
                android:inputType="none"
                android:paddingLeft="@dimen/dp_10"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_30"
            >
            <TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/info_set_weight"
				android:textSize="@dimen/sp_20"
				android:textColor="@color/color_black"
                />
            <EditText 
                android:layout_width="@dimen/dp_220"
                android:layout_height="@dimen/dp_35"
                android:background="@color/color_ed"
                android:layout_marginLeft="@dimen/dp_20"
                android:singleLine="true"
                android:inputType="none"
                android:paddingLeft="@dimen/dp_10"
                />
        </LinearLayout>
       <Button 
        	android:id="@+id/myteam_createteam"
        	android:layout_width="@dimen/dp_320"
        	android:layout_height="@dimen/dp_50"
        	android:background="@drawable/info_setting_logout"
        	android:text="@string/info_set_logout"
        	android:textSize="@dimen/sp_20"
        	android:textColor="@color/color_blue"
        	android:gravity="center"
        	android:paddingTop="@dimen/dp_5"
        	android:paddingBottom="@dimen/dp_5"
        	android:layout_gravity="center_horizontal"
        	android:layout_marginTop="@dimen/dp_200"
          />
</LinearLayout>
