<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/color_white"
    >
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
		    <LinearLayout 
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:orientation="horizontal"
		      android:padding="@dimen/dp_10"
		      >
		      <ImageView 
		          android:id="@+id/farm_image"
		          android:layout_width="@dimen/dp_100"
		          android:layout_height="@dimen/dp_100"
		          android:background="@drawable/farmyard_listview_mainpicture"
		          android:contentDescription="@string/farmyard_listview_mainpicture"
		          />
		      <LinearLayout 
		          android:layout_width="wrap_content"
		          android:layout_height="match_parent"
		          android:orientation="vertical"
		          android:layout_marginLeft="@dimen/dp_10"
		          >
		          <RelativeLayout 
		          	android:layout_width="wrap_content"
		          	android:layout_height="0dp"
		          	android:layout_weight="1"
		         	>
			          <TextView 
			              android:id="@+id/farm_name"
			              android:layout_width="wrap_content"
			              android:layout_height="wrap_content"
			              android:textSize="@dimen/sp_16"
			              android:textColor="@color/color_text"
			              />
			          <TextView 
			              android:id="@+id/farm_distance"
			              android:layout_width="wrap_content"
			              android:layout_height="wrap_content"
			              android:layout_alignParentRight="true"
			              android:layout_marginRight="@dimen/dp_10"
			              android:layout_alignBaseline="@id/farm_name"
			              android:textSize="@dimen/sp_12"
			              />
		      	  </RelativeLayout>
		          <LinearLayout 
		              android:layout_width="wrap_content"
		              android:layout_height="0dp"
		              android:orientation="horizontal" 
		              android:layout_weight="1"
		              >
					  <ImageView
					      android:layout_width="wrap_content"
					      android:layout_height="wrap_content"
					      android:src="@drawable/farmyard_listview_phone"
					      android:contentDescription="@string/farmyard_listview_phone"
					      />            
					   <TextView 
					       android:id="@+id/farm_phone"
					       android:layout_width="wrap_content"
					       android:layout_height="wrap_content"
					       android:textSize="@dimen/sp_14"
					       android:layout_marginLeft="@dimen/dp_5"
					       />
		          </LinearLayout>
		          <LinearLayout 
		              android:layout_width="wrap_content"
		              android:layout_height="0dp"
		              android:orientation="horizontal"
		              android:layout_weight="1" 
		              >
					  <ImageView
					      android:layout_width="wrap_content"
					      android:layout_height="wrap_content"
					      android:src="@drawable/farmyard_listview_location"
					      android:contentDescription="@string/farmyard_listview_location"
					      />            
					   <TextView 
					       android:id="@+id/farm_address"
					       android:layout_width="wrap_content"
					       android:layout_height="wrap_content"
					       android:textSize="@dimen/sp_14"
					       android:layout_marginLeft="@dimen/dp_5"
					       />
		          </LinearLayout>
		          <LinearLayout 
		              android:layout_width="wrap_content"
		              android:layout_height="0dp"
		              android:orientation="horizontal" 
		              android:layout_weight="1"
		              >
					  <ImageView
					      android:layout_width="wrap_content"
					      android:layout_height="wrap_content"
					      android:src="@drawable/farmyard_listview_coupon"
					      android:contentDescription="@string/farmyard_listview_coupon"
					      />            
					   <TextView 
					       android:id="@+id/farm_coupon"
					       android:layout_width="wrap_content"
					       android:layout_height="wrap_content"
					       android:textSize="@dimen/sp_14"
					       android:layout_marginLeft="@dimen/dp_5"
					       />
		          </LinearLayout>
		      </LinearLayout>
		  </LinearLayout>
		  
			<LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@color/color_blue"
			    android:orientation="horizontal"
			    android:padding="@dimen/dp_5"
			    android:gravity="center_vertical"
			    >
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/farmyard_item_food"
			        android:textSize="@dimen/sp_20"
			        android:textColor="@color/color_white"
			        android:layout_marginLeft="@dimen/dp_15"
			        />
			    <ImageView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:src="@drawable/farmyard_listview_food_white"
			        android:layout_marginLeft="@dimen/dp_10"
			        android:contentDescription="@string/farmyard_listview_food"
			        />
			</LinearLayout>
			<ImageView 
			    android:layout_width="@dimen/dp_320"
			    android:layout_height="@dimen/dp_200"
			    android:background="@drawable/farmyard_food_1"
			    android:layout_margin="@dimen/dp_10"
			    android:contentDescription="@string/farmyard_moni"
			    />
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/farmyard_food_price_1"
			    android:layout_gravity="center_horizontal"
			    />
			<ImageView 
			    android:layout_width="@dimen/dp_320"
			    android:layout_height="@dimen/dp_200"
			    android:background="@drawable/farmyard_food_2"
			    android:layout_margin="@dimen/dp_10"
			    android:contentDescription="@string/farmyard_moni"
			    />
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/farmyard_food_price_2"
			    android:layout_gravity="center_horizontal"
			    />
			<LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@color/color_blue"
			    android:orientation="horizontal"
			    android:padding="@dimen/dp_5"
			    android:gravity="center_vertical"
			    android:layout_marginTop="@dimen/dp_10"
			    >
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/farmyard_playing"
			        android:textSize="@dimen/sp_20"
			        android:textColor="@color/color_white"
			        android:layout_marginLeft="@dimen/dp_15"
			        />
			    <ImageView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:src="@drawable/farmyard_listview_enjoy_white"
			        android:layout_marginLeft="@dimen/dp_10"
			        android:contentDescription="@string/farmyard_moni"
			        />
			</LinearLayout>
			<ImageView 
			    android:layout_width="@dimen/dp_320"
			    android:layout_height="@dimen/dp_200"
			    android:background="@drawable/farmyard_enjoy"
			    android:layout_margin="@dimen/dp_10"
			    android:contentDescription="@string/farmyard_moni"
			    />
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/farmyard_piaoliu"
			    android:layout_gravity="center_horizontal"
			    />
			<LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@color/color_blue"
			    android:orientation="horizontal"
			    android:padding="@dimen/dp_5"
			    android:layout_marginTop="@dimen/dp_10"
			    android:gravity="center_vertical"
			    >
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/farmyard_rest"
			        android:textSize="@dimen/sp_20"
			        android:textColor="@color/color_white"
			        android:layout_marginLeft="@dimen/dp_15"
			        />
			    <ImageView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:src="@drawable/farmyard_listview_live_white"
			        android:layout_marginLeft="@dimen/dp_10"
			        android:contentDescription="@string/farmyard_moni"
			        />
			</LinearLayout>
			<ImageView 
			    android:layout_width="@dimen/dp_320"
			    android:layout_height="@dimen/dp_200"
			    android:background="@drawable/farmyard_live"
			    android:layout_margin="@dimen/dp_10"
			    android:contentDescription="@string/farmyard_moni"
			    />
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/farmyard_rest_text"
			    android:layout_gravity="center_horizontal"
			    />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
