<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/color_F8"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_blue"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10" >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_70"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:src="@drawable/info_top_image" 
            android:contentDescription="@string/img_all"
            />
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:paddingLeft="@dimen/dp_10"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_phone"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/color_white"
                />
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/info_set_sex_male"
	                android:textColor="@color/color_white"
                	/>
                <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/info_space"
	                android:textColor="@color/color_white"
	                android:layout_marginLeft="@dimen/dp_10"
                	/>
                <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/info_height"
	                android:textColor="@color/color_white"
	                android:layout_marginLeft="@dimen/dp_10"
                	/>
                <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/info_space"
	                android:textColor="@color/color_white"
	                android:layout_marginLeft="@dimen/dp_10"
                	/>
                <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/info_weight"
	                android:textColor="@color/color_white"
	                android:layout_marginLeft="@dimen/dp_10"
                	/>
            </LinearLayout>
        </LinearLayout>
        <ImageView 
            android:id="@+id/info_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/info_set_white"
            android:layout_weight="1"
            android:contentDescription="@string/img_all"
            />
    </LinearLayout>
    <ImageView 
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:src="@drawable/info_test"
	   android:contentDescription="@string/img_all"
	   />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/color_white"
            android:paddingTop="@dimen/dp_10"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_steps"
                />
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/info_steps"
                android:contentDescription="@string/img_all"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/color_white"
            android:layout_marginLeft="@dimen/dp_5"
            android:paddingTop="@dimen/dp_10"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_distance"
                />
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/info_metres"
                android:contentDescription="@string/img_all"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/color_white"
            android:layout_marginLeft="@dimen/dp_5"
            android:paddingTop="@dimen/dp_10"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_calory"
                />
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/info_calory"
                android:contentDescription="@string/img_all"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_news"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/color_white"
            android:background="@color/color_blue"
            android:paddingTop="@dimen/dp_5"
        	android:paddingBottom="@dimen/dp_5"
        	android:paddingLeft="@dimen/dp_20"
        	android:gravity="center_vertical"
        	android:layout_marginTop="@dimen/dp_10"
            />
    <ListView 
        android:id="@+id/info_news_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@color/color_ddd"
        android:dividerHeight="@dimen/dp_1"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        >
    </ListView>
</LinearLayout>
