<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white"
    android:padding="@dimen/dp_20"
    >
    <TextView 
        android:id="@+id/dialog_jointeam_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/color_text"
        />
    <Button 
        android:id="@+id/dialog_joinsuccess_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_click_blue"
        android:text="@string/dialog_jointeam_button"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/color_white"
        android:paddingLeft="@dimen/dp_40"
        android:paddingRight="@dimen/dp_40"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />
    <LinearLayout 
        android:id="@+id/dialog_jointeam_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_20"
        >
        <Button 
            android:id="@+id/dialog_jointeam_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/dialog_jointeam_cancel"
            android:textSize="@dimen/sp_16"
            android:background="@drawable/button_click_blue"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            />
        <ImageView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:contentDescription="@string/img_all"
            />
        <Button 
            android:id="@+id/dialog_jointeam_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/dialog_jointeam_join"
            android:textSize="@dimen/sp_16"
            android:background="@drawable/button_click_blue"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            />
    </LinearLayout>
</LinearLayout>
