<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    >
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/map_scene_details_topimage"
        android:contentDescription="@string/img_all"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/map_scene_details" 
        android:contentDescription="@string/img_all"
        />

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="@color/color_blue"
	    android:layout_marginLeft="@dimen/dp_10"
	    android:layout_marginRight="@dimen/dp_10"
	    android:layout_marginTop="@dimen/dp_5"
	    android:gravity="center_vertical"
	    >
	    <ImageView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:src="@drawable/map_scene_details_weather"
	        android:layout_weight="1"
	        android:contentDescription="@string/img_all"
	        />
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/map_scene_weather"
	        android:layout_weight="1"
	        />
	    <ImageView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:src="@drawable/map_scene_details_temprature"
	        android:layout_weight="1"
	        android:contentDescription="@string/img_all"
	        />
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/map_scene_temp"
	        android:layout_weight="1"
	        />
	    <ImageView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:src="@drawable/map_scene_details_temprature"
	        android:layout_weight="1"
	        android:contentDescription="@string/img_all"
	        />
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:layout_weight="1"
	        />
	    <ImageView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:src="@drawable/map_scene_details_clothes"
	        android:layout_weight="1"
	        android:contentDescription="@string/img_all"
	        />
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/map_scene_wear"
	        android:layout_weight="1"
	        />
	</LinearLayout>
    <TextView 
        android:id="@+id/detail_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:layout_margin="@dimen/dp_10"
        />
</LinearLayout>
